[package]
name    = "harmony-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { version = "1.0.4", default-features = false, features = [
    "napi8",
    "async",
] }
napi-derive-ohos = { version = "1.0.4" }
tokio = {version = "1", features = ["macros"]}
tokio-tungstenite = "0.26"
futures-util = "0.3"
ohos-hilog-binding = {version = "0.1"}
base64 = "0.21"

[build-dependencies]
napi-build-ohos = { version = "1.0.4" }

[profile.release]
lto = true
